--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <ul>
+    <h1 class="title">DOM and Events</h1>
+    <ul class="tasks">
       <li><a href="task-01.html">Task 1</a></li>
       <li><a href="task-02.html">Task 2</a></li>
       <li><a href="task-03.html">Task 3</a></li>
@@ -18,7 +19,7 @@
       <li><a href="task-07.html">Task 7</a></li>
       <li><a href="task-08.html">Task 8</a></li>
       <li><a href="task-09.html">Task 9</a></li>
-      <li><a href="task-10.html">Task 10 (optional)</a></li>
+      <li><a href="task-10.html">Task 10</a></li>
     </ul>
   </body>
 </html>
