--- a/task-09.html
+++ b/task-09.html
@@ -6,30 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 9</title>
     <link rel="stylesheet" href="css/common.css" />
-    <style>
-      .widget {
-        text-align: center;
-      }
-
-      .widget p {
-        margin-top: 0;
-        margin-bottom: 16px;
-        font-size: 48px;
-      }
-
-      .widget span {
-        font-family: monospace;
-      }
-
-      .widget button {
-        padding: 8px 12px;
-        font-size: 20px;
-        cursor: pointer;
-      }
-    </style>
   </head>
   <body>
-    <p><a href="index.html">Go back</a></p>
+    <p>
+      <a href="index.html" class="back-button"
+        ><svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          fill="currentColor"
+          class="bi bi-arrow-left-short"
+          viewBox="0 0 16 16"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5z"
+          />
+        </svg>
+        Back</a
+      >
+    </p>
 
     <div class="widget">
       <p>Background color: <span class="color">-</span></p>
