--- a/task-02.html
+++ b/task-02.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#10162F" />
     <title>Task 2</title>
     <link rel="stylesheet" href="css/common.css" />
     <style>
@@ -35,6 +36,8 @@
         Back</a
       >
     </p>
+
+    <h1 class="title">Task 2</h1>
 
     <ul id="ingredients"></ul>
 
