--- a/task-05.html
+++ b/task-05.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#10162F" />
     <title>Task 5</title>
     <link rel="stylesheet" href="css/common.css" />
   </head>
@@ -26,6 +27,8 @@
         Back</a
       >
     </p>
+
+    <h1 class="title">Task 5</h1>
 
     <input type="text" id="name-input" placeholder="Please enter your name" />
     <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
