--- a/task-08.html
+++ b/task-08.html
@@ -4,26 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#10162F" />
     <title>Task 8</title>
     <link rel="stylesheet" href="css/common.css" />
-    <style>
-      .login-form {
-        max-width: 320px;
-        display: flex;
-        flex-direction: column;
-      }
-
-      .login-form label {
-        margin-bottom: 16px;
-      }
-
-      .login-form input,
-      .login-form button {
-        width: 100%;
-        padding: 4px;
-        font: inherit;
-      }
-    </style>
   </head>
   <body>
     <p>
@@ -44,6 +27,8 @@
         Back</a
       >
     </p>
+
+    <h1 class="title">Task 8</h1>
 
     <form class="login-form">
       <label>
