--- a/task-10.html
+++ b/task-10.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#10162F" />
     <title>Task 10 (optional)</title>
     <link rel="stylesheet" href="css/common.css" />
   </head>
@@ -26,6 +27,8 @@
         Back</a
       >
     </p>
+
+    <h1 class="title">Task 10</h1>
 
     <div id="controls">
       <input type="number" min="1" max="100" step="1" />
