--- a/task-01.html
+++ b/task-01.html
@@ -30,6 +30,14 @@
 
     <h1 class="title">Task 1</h1>
 
+    <p class="description">
+      In this task, an HTML structure containing a list of categories
+      ul#categories is processed. A script has been provided to count the
+      categories and display the results, including the header text and the
+      number of elements for each category. The result can be found in the
+      console.
+    </p>
+
     <ul id="categories">
       <li class="item">
         <h2>Animals</h2>
