--- a/task-02.html
+++ b/task-02.html
@@ -39,6 +39,13 @@
 
     <h1 class="title">Task 2</h1>
 
+    <p class="description">
+      Task 2 centers around an HTML structure with an empty ul#ingredients list.
+      The JavaScript script creates list items, populates them with items from
+      an array, and assigns a specific class. These items are then inserted into
+      the ul#ingredients list.
+    </p>
+
     <ul id="ingredients"></ul>
 
     <script src="js/task-02.js" type="module"></script>
