--- a/task-03.html
+++ b/task-03.html
@@ -30,6 +30,12 @@
 
     <h1 class="title">Task 3</h1>
 
+    <p class="description">
+      In Task 3, a script is implemented to create an image gallery using an
+      array of objects. The images are presented as part of a gallery with
+      design features that utilize flexboxes or grids.
+    </p>
+
     <ul class="gallery"></ul>
 
     <script src="js/task-03.js" type="module"></script>
