--- a/task-05.html
+++ b/task-05.html
@@ -30,6 +30,11 @@
 
     <h1 class="title">Task 5</h1>
 
+    <p class="description">
+      Task 5 involves a script that updates a text span based on the input in a
+      text field. When the input field is empty, the span displays "Anonymous."
+    </p>
+
     <input type="text" id="name-input" placeholder="Please enter your name" />
     <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
 
