--- a/task-07.html
+++ b/task-07.html
@@ -30,6 +30,12 @@
 
     <h1 class="title">Task 7</h1>
 
+    <p class="description">
+      This task focuses on changing the font size of a text element based on the
+      input from a range control element. The text size changes dynamically as
+      the scrollbar is adjusted.
+    </p>
+
     <input id="font-size-control" type="range" min="16" max="96" />
     <br />
     <span id="text">Abracadabra!</span>
