--- a/task-08.html
+++ b/task-08.html
@@ -30,6 +30,12 @@
 
     <h1 class="title">Task 8</h1>
 
+    <p class="description">
+      Task 8 involves managing a login form. The script handles form submission,
+      prevents page reload, displays an alert for empty fields, collects and
+      logs form data, and clears input fields upon submission.
+    </p>
+
     <form class="login-form">
       <label>
         Email
