--- a/task-09.html
+++ b/task-09.html
@@ -30,6 +30,14 @@
 
     <h1 class="title">Task 9</h1>
 
+    <p class="description">
+      A script in Task 9 changes the background color of the
+      <code>&lt;body&gt;</code>
+      element when a button is clicked. <br />
+      The color is generated randomly using the provided function, and the color
+      value is displayed in a <code>&lt;span&gt;</code>.
+    </p>
+
     <div class="widget">
       <p>Background color: <span class="color">-</span></p>
       <button type="button" class="change-color">Change color</button>
