--- a/task-10.html
+++ b/task-10.html
@@ -30,6 +30,12 @@
 
     <h1 class="title">Task 10</h1>
 
+    <p class="description">
+      Task 10 allows users to create and clear a collection of elements. Users
+      can specify the number of elements to create, and these elements are added
+      to a container. A "destroy" button removes all created elements.
+    </p>
+
     <div id="controls">
       <input type="number" min="1" max="100" step="1" />
       <button type="button" data-create>Create</button>
