--- a/task-04.html
+++ b/task-04.html
@@ -30,6 +30,12 @@
 
     <h1 class="title">Task 4</h1>
 
+    <p class="description">
+      This task is about creating a basic counter with buttons that increment
+      and decrement a value when clicked. The script maintains the current
+      counter value and updates the interface accordingly.
+    </p>
+
     <div id="counter">
       <button type="button" data-action="decrement">-1</button>
       <span id="value">0</span>
