--- a/task-06.html
+++ b/task-06.html
@@ -30,6 +30,12 @@
 
     <h1 class="title">Task 6</h1>
 
+    <p class="description">
+      In Task 6, the script checks the character count in an input field when
+      focus is lost. Depending on whether the entered characters match the
+      specified data-length attribute, the input's border is styled accordingly.
+    </p>
+
     <input
       type="text"
       id="validation-input"
